# mtf_mapper

./: CMakeLists.txt  license.txt  todo.txt  ubuntu_build_notes.txt
cmake_helpers/: FindAsciidoc.cmake  FindTCLAP.cmake
doc/: .gitignore  CMakeLists.txt  mtf_mapper.tex  mtf_mapper_user_guide.tex
include/: afft.h  auto_crop.h  bayer.h  block.h  bundle.h  ca_core.h  ca_core_tbb_adaptor.h  ca_renderer_grid.h  ca_renderer_print.h  camera_draw.h  common_types.h  component_labelling.h  config.h.in  cropper_base.h  cubic_spline_surface.h  demosaic.h  display_profile.h  distance_scale.h  distortion_optimizer.h  edge_info.h  edge_model.h  edge_record.h  ellipse.h  ellipse_decoder.h  esf_model.h  esf_model_kernel.h  esf_model_loess.h  esf_sampler.h  esf_sampler_deferred.h  esf_sampler_line.h  esf_sampler_piecewise_quad.h  esf_sampler_quad.h  fastexp.h  fiducial_positions.h  five_point_focal_length_radial_distortion.h  focus_surface.h  gradient.h  grid_interpolator.h  imatest_crop.h  job_metadata.h  (+41 more)
manpages/: CMakeLists.txt  mtf_generate_rectangle.1.txt  mtf_generate_test_chart.1.txt  mtf_mapper.1.txt  mtf_mapper_gui.1.txt
src/: auto_crop.cc  ca_core.cc  ca_renderer_grid.cc  ca_renderer_print.cc  component_labelling.cc  cropper.cc  cubic_spline_surface.cc  demosaic.cc  display_profile.cc  distortion_optimizer.cc  ellipse.cc  esf_model.cc  esf_model_kernel.cc  esf_model_loess.cc  esf_sampler.cc  esf_sampler_deferred.cc  esf_sampler_line.cc  esf_sampler_piecewise_quad.cc  esf_sampler_quad.cc  find_polynomial_roots_jenkins_traub.cc  five_point_focal_length_radial_distortion.cc  gradient.cc  grid_interpolator.cc  imatest_crop.cc  laguerre_roots.cc  loess_fit.cc  mtf_core.cc  mtf_mapper.cc  mtf_renderer_annotate.cc  mtf_renderer_focus.cc  mtf_renderer_grid.cc  mtf_renderer_lensprofile.cc  pava.cc  point_helpers.cc  ratpoly_fit.cc  srgb_render.cc  thresholding.cc  tiffsniff.cc  undistort.cc  undistort_equiangular.cc  (+2 more)
src/generator/: aabb.h  airy_sampler.h  generate_rectangle.cc  geom.h  gh_clipping.cc  gh_clipping.h  multipolygon_geom.h  noise_source.h  normal_sampler.h  png_icc_headers.h  polygon_geom.h  quadtree.h  render.h  render_importance_sampling.h  render_integral.h  render_is_airy.h  render_is_airy_base.h  render_is_airybox.h  render_is_airyolpf.h  render_is_rect.h  render_is_rect_base.h  render_is_rectbox.h  render_is_wavefront.h  render_is_wavefront_base.h  render_is_wavefront_box.h  sinc_sampler.h  sine_integral.h  tclap_constraints.h  wavefront_sampler.h
src/gui/: about_dialog.cc  about_dialog.h  cache_entry.h  common.h  edge_select_dialog.cc  edge_select_dialog.h  entry_view.h  exiv2_property.cc  exiv2_property.h  gl_image_panel.cc  gl_image_panel.h  gl_image_panel_dots.cc  gl_image_panel_dots.h  gl_image_panel_edges.cc  gl_image_panel_edges.h  gl_image_panel_edges_nested.cc  gl_image_viewer.cc  gl_image_viewer.h  help_dialog.cc  help_dialog.h  histo_widget.cc  histo_widget.h  histogram_type.h  icons.rc  image_viewport.h  input_file_record.h  main.cc  manual_roi_help_dialog.cc  manual_roi_help_dialog.h  mtfm.qrc  mtfmapper_app.cc  mtfmapper_app.h  nonempty_validator.h  processing_command.h  processor_state.cc  processor_state.h  raw_developer.h  raw_developer_dcraw.h  raw_developer_libraw.h  settings_dialog.cc  (+15 more)
src/test_chart_generator/: alpa_correction.h  generate_test_chart.cc  lightweight_polygon.h  svg_page.h  svg_page_focus.h  svg_page_grid.h  svg_page_lensgrid.h  svg_page_manualperspective.h  svg_page_perspective.h
test/: batch.sh  build_test_charts.sh  gen_accuracy_plot.r  mtf_batch.sh
